--- a/QR-Code/styles.css
+++ b/QR-Code/styles.css
@@ -4,7 +4,7 @@
 body{
     background-color: #b1d2f5;
 }
-.container{
+.main{
     background-color: #fff;
     border-radius: 20px;
     margin: 0 auto;
