--- a/QR-Code/styles.css
+++ b/QR-Code/styles.css
@@ -29,7 +29,7 @@ img{
     font-weight:900;
 }
 .text-1{
-   
+    font-size: 15px
     text-align: center;
     font-family: sans-serif;
     font-weight: 400;
