--- a/QR-Code/styles.css
+++ b/QR-Code/styles.css
@@ -2,7 +2,7 @@
 
 
 body{
-    background-color: ##D3D3D3;
+    background-color: #F2F2F2
 }
 .main{
     background-color: #fff;
@@ -12,7 +12,7 @@ body{
     padding-top: 20px;
     padding-left: 20px;
     width: 320px;
-    height: 420px;
+    height: 497px;
 
 }
 img{
