--- a/QR-Code/styles.css
+++ b/QR-Code/styles.css
@@ -2,14 +2,14 @@
 
 
 body{
-    background-color: #f2f2f2
+    background-color: #D5E1EF;
     font-family: Outfit;
 }
 .main{
     background-color: #fff;
     border-radius: 20px;
     margin: 0 auto;
-    margin-top: 60px;
+    margin-top: 100px;
     padding-top: 20px;
     padding-left: 20px;
     width: 320px;
