--- a/QR-Code/styles.css
+++ b/QR-Code/styles.css
@@ -28,7 +28,7 @@ img{
     display:table-cell;
     text-align: center;
     font-weight:700;
-    color: #1f31f4;
+    color: #1f314f;
 }
 .text-1{
     font-size: 15px
