--- a/QR-Code/styles.css
+++ b/QR-Code/styles.css
@@ -18,8 +18,8 @@ body{
 }
 img{
     border-radius: 20px;
-    width: 300px;
-    height: 250px;
+    width: 328x;
+    height: 328px;
 }
 .heading1{
     padding-top: 20px;
